Adds recall, f1-score functions

--- a/OntoEnricher/src/Untitled.ipynb
+++ b/OntoEnricher/src/Untitled.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "parsed_file = \"test_file\"\n",
     "word_occurence_map = {}\n",
     "\n",
@@ -35,6 +37,13 @@
     "    word_occurence_map[key] = current\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -32724,303 +32733,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "2\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "1\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "2\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "1\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "2\n",
-      "3\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "2\n",
-      "2\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "2\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "1\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "2\n",
-      "2\n",
-      "2\n",
-      "0\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "3\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "0\n",
-      "3\n",
-      "2\n",
-      "1\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.0"
+       "2994584"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "def calculate_precision(true, pred):\n",
-    "    true_f, pred_f = [], []\n",
-    "    for i,l in enumerate(true):\n",
-    "        if l!=4:\n",
-    "            print (l)\n",
-    "            true_f.append(l)\n",
-    "            pred_f.append(pred[i])\n",
-    "    return accuracy_score(true_f, pred_f)\n",
-    "calculate_precision(true, pred)"
+    "dataset = [l.split(\"\\t\") for l in open(\"../files/dataset/dataset.tsv\").read().split(\"\\n\")]\n",
+    "dataset_t = [\"\\t\".join(l) for l in dataset if l[-1]!=\"none\"]\n",
+    "dataset_f = [\"\\t\".join(l) for l in dataset if l[-1]==\"none\"]\n",
+    "open(\"../files/dataset/dataset_t.tsv\",\"w+\").write(\"\\n\".join(dataset_t))\n",
+    "open(\"../files/dataset/dataset_f.tsv\",\"w+\").write(\"\\n\".join(dataset_f))"
    ]
   },
   {
