--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,38 +24,38 @@
     "instances_file = '../files/dataset/test_instances.tsv'\n",
     "knocked_file = '../files/dataset/test_knocked.tsv'\n",
     "output_folder = \"../junk/Output/\"\n",
-    "embeddings_folder = \"../junk/Wiki2vec_lite.dat/\"\n",
+    "embeddings_folder = \"../junk/Glove_lite.dat/\"\n",
     "USE_folder = \"/home/vlead/USE\"\n",
-    "embeddings_file = \"/home/vlead/wiki2vec_glove.txt\"\n",
+    "embeddings_file = \"/data/Vivek/glove.6B.300d.txt\"\n",
     "use_embeddings = \"../files/embeddings.pt\"\n",
     "\n",
     "POS_DIM = 4\n",
     "DEP_DIM = 5\n",
     "DIR_DIM = 1\n",
     "EMBEDDING_DIM = 300\n",
-    "NULL_EMBEDDING = np.random.uniform(-1,1, size=300)\n",
     "NULL_PATH = ((0, 0, 0, 0),)\n",
     "relations = [\"hypernym\", \"hyponym\", \"concept\", \"instance\", \"none\"]\n",
     "# relations = [\"True\", \"False\"]\n",
     "NUM_RELATIONS = len(relations)\n",
     "prefix = \"../junk/db_files/\"\n",
-    "op_file = \"../junk/dataset_parsed_wiki2vec_new.pkl\"\n",
+    "op_file = \"../junk/dataset_glove_lite.pkl\"\n",
+    "\n",
     "# model = KeyedVectors.load_word2vec_format(\"/data/Vivek/glove_tmp\")\n",
     "\n",
-    "wiki2vec = KeyedVectors.load_word2vec_format(\"/home/vlead/enwiki_20180420_win10_300d.txt\")\n",
+    "# wiki2vec = KeyedVectors.load_word2vec_format(\"/home/vlead/enwiki_20180420_win10_300d.txt\")\n",
     "\n",
     "\n",
-    "og_dict = deepcopy(wiki2vec.wv.vocab)\n",
-    "for k in og_dict:\n",
-    "    if \"/\" in k:\n",
-    "        wiki2vec.wv.vocab[k.split(\"/\")[1].lower()] = wiki2vec.wv.vocab[k]\n",
-    "        del wiki2vec.wv.vocab[k]\n",
-    "del og_dict\n"
+    "# og_dict = deepcopy(wiki2vec.wv.vocab)\n",
+    "# for k in og_dict:\n",
+    "#     if \"/\" in k:\n",
+    "#         wiki2vec.wv.vocab[k.split(\"/\")[1].lower()] = wiki2vec.wv.vocab[k]\n",
+    "#         del wiki2vec.wv.vocab[k]\n",
+    "# del og_dict\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
      "output_type": "stream",
      "text": [
       "Parsing dataset for  ../junk/db_files/\n",
-      "Successful hits:  23209 Failed hits:  12289\n",
+      "Successful hits:  22833 Failed hits:  12665\n",
       "Parsed ../junk/db_files/\n"
      ]
     }
@@ -82,15 +82,15 @@
     "    return entity\n",
     "\n",
     "def entity_to_id(db, entity):\n",
-    "    global success, failed\n",
+    "    global success, faile\n",
     "    entity_id = db.get(entity)\n",
     "    if entity_id:\n",
     "        success.append(entity)\n",
     "        return int(entity_id)\n",
-    "    closest_entity = resolved.get(entity, \"\")\n",
-    "    if closest_entity and closest_entity[0]:\n",
-    "        success.append(entity)\n",
-    "        return int(db.get(closest_entity[0]))\n",
+    "#     closest_entity = resolved.get(entity, \"\")\n",
+    "#     if closest_entity and closest_entity[0]:\n",
+    "#         success.append(entity)\n",
+    "#         return int(db.get(closest_entity[0]))\n",
     "    failed.append(entity)\n",
     "    return -1\n",
     "\n",
@@ -134,6 +134,7 @@
     "            word2idx[word] = idx\n",
     "            idx += 1\n",
     "#     print (vectors.shape)\n",
+    "\n",
     "    row_norm = np.sum(np.abs(vectors)**2, axis=-1)**(1./2)\n",
     "    vectors /= row_norm[:, np.newaxis]\n",
     "    vectors = bcolz.carray(vectors, rootdir=embeddings_folder, mode='w')\n",
@@ -3428,192 +3429,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89821\n"
+     ]
+    }
+   ],
+   "source": [
+    "true_file = open(\"../files/dataset/dataset_t.tsv\", \"r\").read().split(\"\\n\")\n",
+    "false_file = open(\"../files/dataset/dataset_f.tsv\", \"r\").read().split(\"\\n\")\n",
+    "print (len(false_file))\n",
+    "false_file = false_file[:int(len(false_file) * float(dbpedia_neg/100))]\n",
+    "\n",
+    "custom_train = true_file[:int(0.9*len(true_file))] + false_file[:int(0.9*len(false_file))]\n",
+    "custom_test = true_file[int(0.9*len(true_file)):] + false_file[int(0.9*len(false_file)):]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "carray((2, 300), float64)\n",
-       "  nbytes := 4.69 KB; cbytes := 63.28 KB; ratio: 0.07\n",
-       "  cparams := cparams(clevel=5, shuffle=1, cname='lz4', quantize=0)\n",
-       "  chunklen := 27; chunksize: 64800; blocksize: 0\n",
-       "  rootdir := '../junk/Wiki2vec_lite.dat/'\n",
-       "  mode    := 'w'\n",
-       "[[  9.36631694e-01   3.66290805e-01   4.31264820e-01   1.05601277e-02\n",
-       "    6.81878221e-01   6.64530631e-01   3.43077335e-01   3.82376782e-01\n",
-       "    8.74113563e-01   8.74495034e-01   3.39485856e-01   1.58106937e-01\n",
-       "    4.25430389e-01   8.39161512e-01   2.39343268e-01   9.75185218e-01\n",
-       "    4.51264199e-01   8.98815788e-01   3.38617995e-01   7.66570322e-01\n",
-       "    6.77280083e-01   9.50662852e-01   2.46258926e-01   6.82738066e-01\n",
-       "    6.01115123e-01   5.53237928e-01   4.99363711e-01   6.42666891e-02\n",
-       "    6.13492418e-01   9.99457782e-01   3.72603514e-01   1.97786870e-01\n",
-       "    4.34356812e-01   2.05656321e-01   8.80675011e-01   6.45013299e-01\n",
-       "    7.81576121e-01   6.32090739e-01   2.63118663e-01   1.55527004e-01\n",
-       "    1.76614773e-01   2.44674382e-02   3.66796385e-01   4.86094014e-02\n",
-       "    1.86702333e-01   9.50838591e-01   9.81416524e-01   8.32368564e-01\n",
-       "    9.17121882e-01   5.83331346e-01   8.37847559e-01   6.20845355e-02\n",
-       "    5.59258078e-01   2.05202697e-01   1.45210442e-01   5.30139607e-01\n",
-       "    9.51264066e-01   7.12571541e-01   1.53845660e-01   1.87087754e-01\n",
-       "    1.28456471e-01   1.81093407e-01   2.21232776e-01   6.13843645e-01\n",
-       "    5.63610244e-01   9.31328285e-01   7.74346812e-01   2.24830258e-01\n",
-       "    8.52980893e-01   1.79154679e-01   8.14829182e-01   5.25543840e-01\n",
-       "    8.07765897e-01   7.98513253e-01   1.51914765e-01   3.75931205e-01\n",
-       "    2.82416791e-01   8.92725536e-01   7.18831430e-01   9.18807237e-01\n",
-       "    2.17678685e-01   5.40003188e-01   8.95813776e-01   2.99717518e-01\n",
-       "    2.32612502e-01   5.32125176e-01   7.97930617e-02   6.90435921e-01\n",
-       "    7.03974771e-01   4.92618663e-01   5.14134748e-01   1.74422201e-01\n",
-       "    6.87690686e-01   6.02475078e-01   8.09882994e-01   1.37454639e-01\n",
-       "    7.68540167e-01   9.01838897e-01   3.42590221e-02   7.67752577e-01\n",
-       "    6.28500339e-01   6.70245269e-03   4.01132618e-01   3.35312560e-01\n",
-       "    9.92064511e-01   1.29422947e-01   4.92265594e-01   3.00129631e-01\n",
-       "    7.89753062e-01   2.28567526e-01   5.23077681e-04   5.41662883e-01\n",
-       "    3.33113180e-01   7.19975021e-01   9.13373756e-01   4.96199237e-01\n",
-       "    7.88862722e-01   8.94426575e-01   2.59540262e-01   5.57737891e-01\n",
-       "    9.64726086e-01   9.06428660e-01   3.23119978e-02   7.88522290e-03\n",
-       "    7.19479585e-01   8.33962200e-01   5.47005121e-01   6.21411719e-01\n",
-       "    9.53358341e-01   3.12891176e-01   1.74074660e-01   3.96034197e-01\n",
-       "    2.63599027e-02   5.96977130e-01   7.80752134e-01   7.86363183e-01\n",
-       "    2.45226817e-01   8.76938897e-01   9.61446913e-01   4.88202527e-01\n",
-       "    7.54533126e-01   7.60336541e-01   7.44433134e-01   3.81477255e-01\n",
-       "    5.21285076e-01   5.39416074e-01   1.08916482e-01   8.84770003e-01\n",
-       "    3.85046668e-01   1.43395903e-01   7.18318907e-01   1.47357201e-01\n",
-       "    4.33237503e-01   9.28744338e-01   5.01226080e-01   5.77791687e-02\n",
-       "    3.10704272e-01   6.01185758e-01   2.70010991e-01   1.37112465e-01\n",
-       "    2.58406520e-01   3.27112699e-01   3.21145284e-01   5.89093296e-01\n",
-       "    2.82385994e-02   6.15346579e-01   3.45998462e-01   2.86164239e-02\n",
-       "    8.77888568e-01   4.07059097e-01   6.48911511e-02   1.41394014e-01\n",
-       "    7.83748307e-01   1.69925075e-01   8.29013868e-01   1.83998324e-01\n",
-       "    2.50193515e-01   9.76413594e-01   3.57313174e-01   2.72817889e-01\n",
-       "    9.23311488e-01   2.67959048e-02   9.21161272e-02   2.38028379e-01\n",
-       "    5.78707709e-01   2.84407609e-01   8.74761369e-01   7.76374522e-01\n",
-       "    8.66625960e-01   4.64633930e-01   7.64995180e-04   9.79675942e-02\n",
-       "    7.85653315e-01   7.88065842e-01   5.40917449e-01   3.38947656e-01\n",
-       "    7.06354741e-01   3.79691636e-01   2.90914007e-02   7.25456334e-01\n",
-       "    4.17123168e-01   2.47463500e-01   4.30001222e-01   6.48715138e-01\n",
-       "    8.59295374e-01   5.71440997e-01   3.17897536e-02   6.91476599e-01\n",
-       "    1.57798773e-01   6.78156527e-01   4.28947932e-01   6.09140377e-01\n",
-       "    4.90362173e-01   2.50623448e-01   9.17082143e-01   5.54554257e-01\n",
-       "    7.63716728e-01   4.30807504e-01   4.69558559e-02   8.76226287e-01\n",
-       "    3.56634464e-01   4.36722662e-01   7.91156318e-01   6.80387809e-01\n",
-       "    7.51196472e-01   8.85588341e-01   6.61421331e-01   1.14463691e-01\n",
-       "    3.63935163e-01   8.21579996e-01   1.02983826e-01   8.50998645e-02\n",
-       "    4.87744709e-01   6.77187874e-01   6.83932948e-01   7.78956856e-01\n",
-       "    8.03095974e-01   2.72675740e-01   6.76579390e-01   9.16476811e-01\n",
-       "    9.99270230e-01   5.94666343e-01   4.05754773e-01   6.27715865e-02\n",
-       "    4.99517789e-01   2.95126095e-01   8.94745678e-01   7.39802700e-01\n",
-       "    6.40431751e-02   8.66244320e-01   2.00959353e-02   4.50415959e-01\n",
-       "    4.44340961e-01   6.69312089e-01   2.98413258e-01   5.44690588e-01\n",
-       "    2.15253281e-01   7.57155524e-01   9.00789714e-01   1.49275701e-01\n",
-       "    8.86275053e-01   9.46151958e-01   3.58425336e-01   8.33387333e-01\n",
-       "    7.39044975e-01   1.84298235e-03   2.18195470e-01   8.83347621e-01\n",
-       "    6.29622073e-01   7.18918081e-01   3.05859399e-01   8.01559026e-01\n",
-       "    6.92824799e-01   9.25143898e-02   5.90419767e-01   3.66281158e-01\n",
-       "    7.21700867e-01   8.87101583e-01   7.92050341e-01   6.71392106e-01\n",
-       "    2.16329274e-01   6.19315902e-01   1.85861288e-01   3.58293816e-01\n",
-       "    1.04856026e-01   5.20600109e-01   9.17331027e-01   4.57458069e-01\n",
-       "    5.25870067e-02   8.99259580e-01   7.74042607e-01   3.21285173e-01\n",
-       "    2.57999243e-01   6.35849024e-01   4.51591796e-01   8.15827057e-01\n",
-       "    4.36697229e-01   7.18673188e-01   1.01184654e-01   6.92749985e-01]\n",
-       " [  1.65200000e-01  -5.73000000e-02  -2.61000000e-02   6.12000000e-02\n",
-       "   -5.37000000e-02   5.54000000e-02  -6.90000000e-02  -7.69000000e-02\n",
-       "   -6.61000000e-02  -1.39500000e-01   3.30000000e-03  -5.60000000e-02\n",
-       "   -2.96000000e-02   3.98200000e-01   1.91300000e-01  -2.50700000e-01\n",
-       "    4.10700000e-01  -2.61200000e-01   9.97000000e-02  -7.05000000e-02\n",
-       "   -2.05000000e-01   2.50000000e-03   3.02200000e-01  -2.82000000e-01\n",
-       "   -3.18600000e-01  -3.16900000e-01   1.66200000e-01   1.89000000e-02\n",
-       "   -2.60000000e-01   4.02000000e-02   4.61200000e-01  -1.48700000e-01\n",
-       "   -2.95500000e-01   3.46600000e-01  -3.75100000e-01   1.48000000e-01\n",
-       "    1.28000000e-02  -3.85000000e-02  -2.69900000e-01  -1.73000000e-02\n",
-       "   -4.56400000e-01  -4.57000000e-02   2.31700000e-01  -4.72100000e-01\n",
-       "    5.52000000e-02   6.92000000e-02  -2.20500000e-01   3.28900000e-01\n",
-       "   -2.76500000e-01  -3.24100000e-01  -3.40000000e-03  -5.05400000e-01\n",
-       "    1.67400000e-01  -1.40100000e-01  -2.77500000e-01  -7.35000000e-02\n",
-       "    2.44300000e-01  -8.89000000e-02  -3.70800000e-01   2.61500000e-01\n",
-       "    1.40900000e-01  -3.06600000e-01   3.35200000e-01  -3.42000000e-02\n",
-       "   -9.33000000e-02  -7.08000000e-02  -7.54000000e-02  -9.65000000e-02\n",
-       "    2.75500000e-01   7.19000000e-02  -1.77900000e-01  -2.98300000e-01\n",
-       "    1.58000000e-02   1.05400000e-01   2.97300000e-01  -2.83000000e-02\n",
-       "    3.80600000e-01  -5.54000000e-02   4.77700000e-01   1.19900000e-01\n",
-       "    1.79000000e-02  -1.02700000e-01   5.17500000e-01  -5.30000000e-02\n",
-       "   -3.45100000e-01   1.18300000e-01   3.10000000e-03   1.88700000e-01\n",
-       "   -1.18900000e-01   1.71200000e-01  -2.45000000e-01  -1.19200000e-01\n",
-       "    2.76000000e-02   5.71000000e-02   3.94700000e-01   1.49300000e-01\n",
-       "    2.32000000e-02  -1.87600000e-01  -4.67000000e-02   3.09900000e-01\n",
-       "    8.39600000e-01   1.60900000e-01  -3.37000000e-02  -2.58900000e-01\n",
-       "    2.37000000e-02   2.46100000e-01   3.00500000e-01  -1.17400000e-01\n",
-       "    2.52400000e-01  -3.56100000e-01   2.67100000e-01  -2.09500000e-01\n",
-       "   -4.49000000e-02  -1.61400000e-01   2.90000000e-03  -7.63000000e-02\n",
-       "    5.15000000e-02   2.57400000e-01  -1.43200000e-01   2.16400000e-01\n",
-       "   -1.81000000e-01  -1.64700000e-01   3.62000000e-02  -1.11200000e-01\n",
-       "   -3.40000000e-02   2.90000000e-03   7.92000000e-02   3.03400000e-01\n",
-       "   -1.32500000e-01   2.20600000e-01   1.14500000e-01   5.77000000e-02\n",
-       "   -9.90000000e-03   2.09400000e-01  -2.04300000e-01  -1.44500000e-01\n",
-       "   -3.34600000e-01   3.00400000e-01   2.86200000e-01   3.23200000e-01\n",
-       "   -8.75000000e-02   1.37400000e-01   3.10800000e-01  -2.31100000e-01\n",
-       "    3.20000000e-03   2.63500000e-01   4.28200000e-01   2.32700000e-01\n",
-       "    4.89900000e-01  -3.81800000e-01  -5.14000000e-02  -1.09100000e-01\n",
-       "   -1.38800000e-01   3.07200000e-01   4.27000000e-02   1.39000000e-02\n",
-       "   -6.48000000e-02  -4.35000000e-02  -1.65800000e-01  -2.94000000e-02\n",
-       "    2.33700000e-01   5.25000000e-02  -3.98000000e-02  -2.48800000e-01\n",
-       "    2.56800000e-01   1.21500000e-01   4.69000000e-01   2.03800000e-01\n",
-       "    3.80000000e-02   4.60000000e-02   1.83800000e-01   3.07900000e-01\n",
-       "    2.38300000e-01   1.52600000e-01  -1.66000000e-01  -1.57500000e-01\n",
-       "    3.99900000e-01   2.51700000e-01   4.64000000e-02   1.63600000e-01\n",
-       "    3.27200000e-01  -1.22800000e-01  -2.02400000e-01  -3.10000000e-03\n",
-       "    1.71200000e-01  -1.51700000e-01  -2.57000000e-01   3.45300000e-01\n",
-       "   -1.27300000e-01  -2.68000000e-02   1.88000000e-01   1.41000000e-01\n",
-       "   -1.68200000e-01   1.36100000e-01  -1.65500000e-01  -1.41600000e-01\n",
-       "    2.45200000e-01  -4.94800000e-01   1.29800000e-01  -1.19000000e-02\n",
-       "   -1.48500000e-01   1.41800000e-01   3.43000000e-02  -1.56800000e-01\n",
-       "    5.85000000e-02   3.63800000e-01   2.83100000e-01  -1.03800000e-01\n",
-       "   -2.82400000e-01  -3.25800000e-01  -5.62000000e-02   9.40000000e-03\n",
-       "   -1.52600000e-01   1.70000000e-02   3.20400000e-01   1.42000000e-01\n",
-       "    2.91000000e-02   8.59000000e-02  -1.69300000e-01   5.58000000e-02\n",
-       "    1.67900000e-01   7.12000000e-02  -4.48000000e-02  -1.53200000e-01\n",
-       "    2.23500000e-01   2.44500000e-01  -1.37000000e-02  -1.45500000e-01\n",
-       "    1.75000000e-02   1.31000000e-02  -7.79000000e-02  -1.97000000e-02\n",
-       "   -7.45000000e-02  -3.53400000e-01   2.92000000e-01  -2.73000000e-02\n",
-       "    1.87500000e-01   3.24800000e-01   2.75500000e-01   4.70000000e-02\n",
-       "   -2.34000000e-02   2.21000000e-01   1.22000000e-02   1.65300000e-01\n",
-       "    2.69800000e-01  -1.76800000e-01  -1.77300000e-01   1.30000000e-02\n",
-       "   -2.07100000e-01   1.04800000e-01   1.00100000e-01   1.34500000e-01\n",
-       "    7.22100000e-01   1.35400000e-01   2.05800000e-01   1.25000000e-01\n",
-       "   -1.78900000e-01   2.76100000e-01   9.00000000e-02  -1.73600000e-01\n",
-       "    3.52000000e-02   8.47000000e-02  -3.00000000e-03   3.78200000e-01\n",
-       "    1.18500000e-01  -1.88000000e-02  -3.79900000e-01  -2.24200000e-01\n",
-       "    1.03000000e-02   1.76000000e-01   4.80900000e-01  -4.53200000e-01\n",
-       "   -4.60000000e-02   1.99900000e-01  -1.22000000e-02  -5.50000000e-03\n",
-       "    3.17000000e-02   2.19200000e-01   1.97000000e-02   3.70000000e-03\n",
-       "    3.75300000e-01  -4.15400000e-01  -5.97000000e-02   1.03700000e-01\n",
-       "   -7.11000000e-02  -6.13000000e-02   2.34000000e-01  -1.23600000e-01\n",
-       "   -5.25000000e-02   1.63000000e-02  -1.19500000e-01   1.85000000e-01\n",
-       "   -3.27900000e-01  -2.48000000e-02  -7.29000000e-02  -4.37000000e-02\n",
-       "    6.98000000e-02   6.54000000e-02  -1.98600000e-01  -1.42800000e-01]]"
+       "(18969, 2109, 13473)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "v"
+    "len(custom_train), len(custom_test), len(false_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "dbpedia_neg = 15"
+   ]
   },
   {
    "cell_type": "code",
