--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -3661,13 +3661,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.float32"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pickle\n",
-    "f = open(\"../junk/use_embeddings_0\", \"rb\")\n",
-    "use_embeds  =  pickle.load(f)"
+    "type(use_embeds[1][1][0])"
    ]
   },
   {
