--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -5091,11 +5091,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open(\"failed_instances\", \"wb\")\n",
+    "f = open(\"../junk/failed_instances\", \"wb\")\n",
     "pickle.dump(list(set(failed)) ,f)"
    ]
   },
